# sqeleton

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ci_full.yml
dev/: dev.env
dev/presto-conf/standalone/: config.properties  jvm.config
dev/trino-conf/: README.md  cert.conf
dev/trino-conf/etc/: config.properties  jvm.config
docs/: conf.py  index.rst  install.md  intro.md  supported-databases.md
sqeleton/: __init__.py  bound_exprs.py  conn_editor.py  repl.py  schema.py  utils.py
sqeleton/abcs/: __init__.py  compiler.py  database_types.py  mixins.py
sqeleton/databases/: __init__.py  _connect.py  base.py  clickhouse.py  databricks.py  dremio.py  duckdb.py  mssql.py  mysql.py  oracle.py  postgresql.py  presto.py  snowflake.py  trino.py
sqeleton/queries/: __init__.py  api.py  ast_classes.py  base.py  compiler.py  extras.py
tests/: common.py  test_database.py  test_query.py  test_sql.py  waiting_for_stack_up.sh
